--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
       href="https://fonts.googleapis.com/css?family=Poppins&display=swap"
       rel="stylesheet"
     />
+    <link href='https://css.gg/close.css' rel='stylesheet'>
+    <link href='https://css.gg/check.css' rel='stylesheet'>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
